# openapi-example

./: Cargo.toml  sample-openapi.json
src/: endpoints.rs  main.rs  openapi_generator.rs
src/controllers/: endpoints.rs
src/models/: employee.rs
